Correct display of jquery cal. hidden by default until click

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -822,6 +822,7 @@ p.tree
 #ui-datepicker-div
 {
   z-index: 9000;
+  display:none;
 }
 
 .add_item_button img, .change_item_button img
